force-app/main/default/objects/SalesBudget__c/SalesBudget__c.object-meta.xml
<CustomObject>
    <label>Sales Budget</label>
    <nameField>
        <label>Sales Budget Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Budgets</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>