force-app/main/default/objects/SalesBudget__c/fields/Margin__c.field-meta.xml
<CustomField>
    <fullName>Margin__c</fullName>
    <label>Margin (USD)</label>
    <summarizedField>SalesBudgetRecord__c.Margin__c</summarizedField>
    <summaryForeignKey>SalesBudgetRecord__c.SalesBudget__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>