force-app/main/default/objects/SalesBudget__c/fields/Name_ERP__c.field-meta.xml
<CustomField>
    <fullName>Name_ERP__c</fullName>
    <description>Sales budget name in the ERP system.</description>
    <inlineHelpText>Sales budget name in the ERP system.</inlineHelpText>
    <label>Sales Budget Name in ERP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>