force-app/main/default/objects/SalesBudget__c/fields/Period__c.field-meta.xml
<CustomField>
    <fullName>Period__c</fullName>
    <formula>Case(Type__c,
					&apos;Y&apos;, Text(Year__c) + &apos;: Year Initial&apos;,
					&apos;HY1&apos;, Text(Year__c) + &apos;: First Half Year&apos;,
					&apos;HY2&apos;, Text(Year__c) + &apos;: Second Half Year&apos;,
					&apos;Q1&apos;, Text(Year__c) + &apos;: Q1 Corrected&apos;,
					&apos;Q2&apos;, Text(Year__c) + &apos;: Q2 Corrected&apos;,
					&apos;Q3&apos;, Text(Year__c) + &apos;: Q3 Corrected&apos;,
					&apos;Q4&apos;, Text(Year__c) + &apos;: Q4 Corrected&apos;,
					null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Period</label>
    <type>Text</type>
</CustomField>