force-app/main/default/objects/SalesBudget__c/fields/PeriodBeginning__c.field-meta.xml
<CustomField>
    <fullName>PeriodBeginning__c</fullName>
    <formula>CASE(Type__c, 
					&apos;Y&apos;, Date(Year__c, 01, 01),
					&apos;HY1&apos;, Date(Year__c, 01, 01),
					&apos;HY2&apos;, Date(Year__c, 07, 01),
					&apos;Q1&apos;, Date(Year__c, 01, 01),
					&apos;Q2&apos;, Date(Year__c, 04, 01),
					&apos;Q3&apos;, Date(Year__c, 07, 01),
					&apos;Q4&apos;, Date(Year__c, 10, 01),
				    null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Period Beginning</label>
    <type>Date</type>
</CustomField>