force-app/main/default/objects/SalesBudget__c/fields/PeriodEnd__c.field-meta.xml
<CustomField>
    <fullName>PeriodEnd__c</fullName>
    <formula>Case(Type__c,
					&apos;Y&apos;, Date(Year__c, 12, 31),
					&apos;HY1&apos;, Date(Year__c, 06, 30),
					&apos;HY2&apos;, Date(Year__c, 12, 31),
					&apos;Q1&apos;, Date(Year__c, 03, 31),
					&apos;Q2&apos;, Date(Year__c, 06, 30),
					&apos;Q3&apos;, Date(Year__c, 09, 30),
					&apos;Q4&apos;, Date(Year__c, 12, 31),
					null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Period End</label>
    <type>Date</type>
</CustomField>