force-app/main/default/objects/SalesBudget__c/fields/ProductionAmount__c.field-meta.xml
<CustomField>
    <fullName>ProductionAmount__c</fullName>
    <label>Dispatched Amount (t)</label>
    <summarizedField>SalesBudgetRecord__c.ProductionAmount__c</summarizedField>
    <summaryForeignKey>SalesBudgetRecord__c.SalesBudget__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>