force-app/main/default/objects/SalesBudget__c/fields/Revenue__c.field-meta.xml
<CustomField>
    <fullName>Revenue__c</fullName>
    <label>Revenue (USD)</label>
    <summarizedField>SalesBudgetRecord__c.Revenue__c</summarizedField>
    <summaryForeignKey>SalesBudgetRecord__c.SalesBudget__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>