force-app/main/default/objects/SalesBudget__c/fields/SalesAmount__c.field-meta.xml
<CustomField>
    <fullName>SalesAmount__c</fullName>
    <label>Sales Amount (t)</label>
    <summarizedField>SalesBudgetRecord__c.SalesAmount__c</summarizedField>
    <summaryForeignKey>SalesBudgetRecord__c.SalesBudget__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>