force-app/main/default/objects/SalesBudget__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Y</fullName>
                <label>Year Initial</label>
            </value>
            <value>
                <fullName>HY1</fullName>
                <label>Corrected HY1</label>
            </value>
            <value>
                <fullName>HY2</fullName>
                <label>Corrected HY2</label>
            </value>
            <value>
                <fullName>Q1</fullName>
                <label>Corrected Q1</label>
            </value>
            <value>
                <fullName>Q2</fullName>
                <label>Corrected Q2</label>
            </value>
            <value>
                <fullName>Q3</fullName>
                <label>Corrected Q3</label>
            </value>
            <value>
                <fullName>Q4</fullName>
                <label>Corrected Q4</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>