force-app/main/default/objects/SalesBudget__c/validationRules/YearValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>YearValidation</fullName>
    <active>true</active>
    <description>Must be current or next year only</description>
    <errorConditionFormula>Or(Year__c &lt; Year(TODAY()), Year__c &gt; Year(Today()) + 1)</errorConditionFormula>
    <errorMessage>You only can change budgets for current or next year.</errorMessage>
</ValidationRule>