force-app/main/default/objects/SalesBudget__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Year__c</columns>
    <columns>Type__c</columns>
    <columns>Approved__c</columns>
    <columns>ID_ERP__c</columns>
    <columns>ProductionAmount__c</columns>
    <columns>SalesAmount__c</columns>
    <columns>Revenue__c</columns>
    <columns>Margin__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>